# ads111x

./: CMakeLists.txt  Kconfig  README.md
ads111x/: ads111x.cpp  ads111x.hpp
examples/cmake_fetch_content/: .gitignore  CMakeLists.txt
examples/cmake_fetch_content/main/: CMakeLists.txt  main.cpp
examples/continuous_conversion/main/: main.cpp
examples/oneshot_conversion/main/: main.cpp
